tests/sema/fail/v39_fail_product_sum_type_collision.ep
# COMPILE_FAIL: duplicate type Value
type Left {}
type Right {}

type Value {}
type Value = Left | Right

fun main(): void {}
